Commited Files for the Meeting Modules display meeting details, pagination, search and other ui

--- a/ace_eletsmeet/meeting/tables.html
+++ b/ace_eletsmeet/meeting/tables.html
@@ -3241,7 +3241,8 @@
                                             </div>
                                         </div><!-- /.modal-content -->
                                     </div><!-- /.modal-dialog -->
-                                </div><!-- PAGE CONTENT ENDS -->
+                                </div>
+                                <!-- PAGE CONTENT ENDS -->
                             </div><!-- /.col -->
                         </div><!-- /.row -->
                     </div><!-- /.page-content -->
@@ -3576,3 +3577,6 @@ window.jQuery || document.write("<script src='../assets/js/jquery1x.js'>"+"<"+"/
         <script src="../docs/assets/js/language/javascript.js"></script>
     </body>
 </html>
+
+
+
